# tbc-app-services-cron

./: .gitignore  function_app.py  host.json  pyproject.toml  requirements.txt
.github/workflows/: azure-functions-app-python.yml
